add uikit styles
Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/app/views/layouts/base.tmpl
+++ b/app/views/layouts/base.tmpl
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow, noarchive, noimageindex" />
+
+    {{ template "partials/header_style" . }}
   </head>
 
   <body>
     {{ template "content" . }}
+    
+    {{ template "partials/footer_script" .}}
   </body>
-  
+
 </html>
