--- a/app/views/layouts/app.tmpl
+++ b/app/views/layouts/app.tmpl
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow, noarchive, noimageindex" />
+    
+    {{ template "partials/header_style" . }}
   </head>
 
   <body>
-    <div class="app-layout">
-      {{ template "content" . }}
-    </div>
+    {{ template "content" . }}
+
+    {{ template "partials/footer_script" .}}
   </body>
 
 </html>
