add sugilanon qoutes
Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -13,6 +13,13 @@
                 <a href="">log in</a>
               </li>
             </ul>
+            <a uk-navbar-toggle-icon="" href="#offcanvas" uk-toggle="" class="uk-navbar-toggle uk-hidden@m uk-navbar-toggle-icon uk-icon">
+              <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" ratio="1">
+                <rect y="9" width="20" height="2"></rect>
+                <rect y="3" width="20" height="2"></rect>
+                <rect y="15" width="20" height="2"></rect>
+              </svg>
+            </a>
           </div>
         </nav>
       </div>
@@ -20,9 +27,11 @@
     <div id="test-filter" class="uk-height-large uk-background-cover uk-overflow-hidden uk-flex uk-flex-top" uk-parallax="sepia: 100;"
       style="background-image: url('./assets/images/old-car.jpeg');">
     
-      <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">Sugilanon</h1>
+      <h1 class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">
+        <img src="./assets/images/sugilanon.png" width="500px" />
+      </h1>
     </div>
-    <div class="uk-section uk-section-muted">      
+    <div class="uk-section uk-section-muted">
       <div class="uk-container">
         <div class="uk-child-width-1-3@m" uk-grid uk-scrollspy="cls: uk-animation-fade; target: > div > .uk-card; delay: 500; repeat: true">
           <div>
@@ -63,6 +72,28 @@
           </div>
         </div>
     
+      </div>
+    </div>
+    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/old-lamp.jpeg');">
+      <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+        <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">
+          Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay atong pagalingi-on nga mapahiyumon. 
+          Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog ning atong kinabuhi. Pero adunay sugilanon nga lisod natong hinumduman, 
+          sama ugaling kung grabing kasakit ang atong nahiaguman. Apan kung atong mahinumduman, kining tanan pagbuot sa atong mahal nga kahitas-an. Dili man patas kung 
+          sa atong pagtaw-an, apan sa ulahi kita ang mabulahan.
+        </p>
+      </div>
+    </div>
+    <div class="uk-section uk-section-muted">
+      <div class="uk-container">
+        <div class="uk-child-width-expand@s" uk-grid>
+          <div>
+            <h1 class="uk-text-lead">Contact Us</h1>
+            <p>Email: info@sugilanon.com</p>
+          </div>
+          <div>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+          <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+        </div>
       </div>
     </div>
   </div>
