--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -13,7 +13,11 @@
                 <a href="">log in</a>
               </li>
             </ul>
-            <a uk-navbar-toggle-icon="" href="#offcanvas" uk-toggle="" class="uk-navbar-toggle uk-hidden@m uk-navbar-toggle-icon uk-icon">
+	    <a
+	      uk-navbar-toggle-icon=""
+	      uk-toggle=""
+	      href="#offcanvas"
+	      class="uk-navbar-toggle uk-hidden@m uk-navbar-toggle-icon uk-icon">
               <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" ratio="1">
                 <rect y="9" width="20" height="2"></rect>
                 <rect y="3" width="20" height="2"></rect>
@@ -24,16 +28,23 @@
         </nav>
       </div>
     </div>
-    <div id="test-filter" class="uk-height-large uk-background-cover uk-overflow-hidden uk-flex uk-flex-top" uk-parallax="sepia: 100;"
+    <div
+      uk-parallax="sepia: 100;"
+      id="test-filter"
+			class="uk-height-large uk-background-cover uk-overflow-hidden uk-flex uk-flex-top"
       style="background-image: url('./assets/images/old-car.jpeg');">
-    
-      <h1 class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">
-        <img src="./assets/images/sugilanon.png" width="500px" />
+      <h1
+	uk-parallax="target: #test-filter; blur: 0,10;"
+				class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+	<img src="./assets/images/sugilanon.png" width="500px"/>
       </h1>
     </div>
     <div class="uk-section uk-section-muted">
       <div class="uk-container">
-        <div class="uk-child-width-1-3@m" uk-grid uk-scrollspy="cls: uk-animation-fade; target: > div > .uk-card; delay: 500; repeat: true">
+	<div
+	  uk-grid
+	  uk-scrollspy="cls: uk-animation-fade; target: > div > .uk-card; delay: 500; repeat: true"
+					class="uk-child-width-1-3@m">
           <div>
             <div class="uk-card uk-card-default uk-card-body">
               <h3 class="uk-card-title">Past</h3>
@@ -71,15 +82,16 @@
             </div>
           </div>
         </div>
-    
       </div>
     </div>
-    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/old-lamp.jpeg');">
+    <div
+      class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top"
+      style="background-image: url('./assets/images/old-lamp.jpeg');">
       <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
         <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">
-          Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay atong pagalingi-on nga mapahiyumon. 
-          Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog ning atong kinabuhi. Pero adunay sugilanon nga lisod natong hinumduman, 
-          sama ugaling kung grabing kasakit ang atong nahiaguman. Apan kung atong mahinumduman, kining tanan pagbuot sa atong mahal nga kahitas-an. Dili man patas kung 
+	  Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay atong pagalingi-on nga mapahiyumon.
+	  Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog ning atong kinabuhi. Pero adunay sugilanon nga lisod natong hinumduman,
+	  sama ugaling kung grabing kasakit ang atong nahiaguman. Apan kung atong mahinumduman, kining tanan pagbuot sa atong mahal nga kahitas-an. Dili man patas kung
           sa atong pagtaw-an, apan sa ulahi kita ang mabulahan.
         </p>
       </div>
