--- a/app/views/dashboard/index.tmpl
+++ b/app/views/dashboard/index.tmpl
@@ -2,7 +2,12 @@
   <div class="ant-layout">
     <div class="ant-layout-header" style="position: fixed; width: 100%;">
       <div class="logo"></div>
-      <ul class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal" role="menu" aria-activedescendant="" tabindex="0" style="line-height: 64px;">
+      <ul
+	class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
+	tabindex="0"
+	style="line-height: 64px;"
+	role="menu"
+	aria-activedescendant="">
         <li class="ant-menu-item" role="menuitem" aria-selected="false">nav 1</li>
         <li class="ant-menu-item ant-menu-item-selected" role="menuitem" aria-selected="true">nav 2</li>
         <li class="ant-menu-item" role="menuitem" aria-selected="false">nav 3</li>
@@ -26,5 +31,5 @@
       <div style="background: rgb(255, 255, 255); padding: 24px; min-height: 380px;">Content</div>
     </div>
     <div class="ant-layout-footer" style="text-align: center;">Ant Design ©2016 Created by Ant UED</div>
-</div>
+  </div>
 {{end}}
