--- a/app/views/partials/footer-script.tmpl
+++ b/app/views/partials/footer-script.tmpl
@@ -1,3 +1,3 @@
 {{define "partials/footer_script"}}
-  <script src="./assets/js/uikit.min.js"></script>
+  <script src="/assets/js/uikit.min.js"></script>
 {{end}}
