--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -3,7 +3,9 @@
     <div uk-sticky="media: 960" class="uk-navbar-container tm-navbar-container uk-sticky uk-sticky-fixed">
       <div class="uk-container uk-container-expand">
         <nav class="uk-navbar">
-          <div class="uk-navbar-left"></div>
+          <div class="uk-navbar-left">
+            <img src="./assets/images/sugilanon.png" width="80px" />
+          </div>
           <div class="uk-navbar-right">
             <ul class="uk-navbar-nav uk-visible@m">
               <li>
@@ -28,75 +30,51 @@
         </nav>
       </div>
     </div>
-    <div
-      uk-parallax="sepia: 100;"
-      id="test-filter"
-			class="uk-height-large uk-background-cover uk-overflow-hidden uk-flex uk-flex-top"
-      style="background-image: url('./assets/images/old-car.jpeg');">
-      <h1
-	uk-parallax="target: #test-filter; blur: 0,10;"
-				class="uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-	<img src="./assets/images/sugilanon.png" width="500px"/>
-      </h1>
+    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/old-lamp.jpeg');">
+
+      <h4 class="uk-padding uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">
+        Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay
+        atong pagalingi-on nga mapahiyumon. Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog
+        ning atong kinabuhi. Pero adunay sugilanon nga lisod natong hinumduman, sama ugaling kung grabing kasakit ang atong nahiaguman.
+        Apan kung atong mahinumduman, kining tanan pagbuot sa atong mahal nga kahitas-an. Dili man patas kung sa atong pagtaw-an,
+        apan sa ulahi kita ang mabulahan.
+      </h4>
     </div>
     <div class="uk-section uk-section-muted">
       <div class="uk-container">
-	<div
-	  uk-grid
-	  uk-scrollspy="cls: uk-animation-fade; target: > div > .uk-card; delay: 500; repeat: true"
-					class="uk-child-width-1-3@m">
-          <div>
-            <div class="uk-card uk-card-default uk-card-body">
-              <h3 class="uk-card-title">Past</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <ul uk-tab>
+          <li class="uk-active" uk-switcher>
+            <a href="#">Pakighinabi</a>
+          </li>
+          <li>
+            <a href="#">Sugilanon</a>
+          </li>
+        </ul>
+
+        <ul class="uk-switcher uk-margin">
+          <li>
+            <div class="uk-card uk-card-default uk-padding">
+              <div class="uk-width-expand">
+                <h4>
+                  <a href="#" class="uk-link-reset">Author</a>
+                </h4>
+              </div>
+              sample  
             </div>
-          </div>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body">
-              <h3 class="uk-card-title">Success</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="uk-card uk-card-secondary uk-padding">
+              <div class="uk-width-expand">
+                <h4>
+                  <a href="#" class="uk-link-reset">Author</a>
+                </h4>
+              </div>
+              sample
             </div>
-          </div>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body">
-              <h3 class="uk-card-title">Failure</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body">
-              <h3 class="uk-card-title">Sad</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body">
-              <h3 class="uk-card-title">Happiness</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div>
-            <div class="uk-card uk-card-default uk-card-body">
-              <h3 class="uk-card-title">Fun</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-        </div>
+          </li>
+          <li>Hello!</li>
+        </ul>
       </div>
     </div>
-    <div
-      class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top"
-      style="background-image: url('./assets/images/old-lamp.jpeg');">
-      <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-        <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">
-	  Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay atong pagalingi-on nga mapahiyumon.
-	  Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog ning atong kinabuhi. Pero adunay sugilanon nga lisod natong hinumduman,
-	  sama ugaling kung grabing kasakit ang atong nahiaguman. Apan kung atong mahinumduman, kining tanan pagbuot sa atong mahal nga kahitas-an. Dili man patas kung
-          sa atong pagtaw-an, apan sa ulahi kita ang mabulahan.
-        </p>
-      </div>
-    </div>
-    <div class="uk-section uk-section-muted">
+    <div class="uk-section uk-section-secondary">
       <div class="uk-container">
         <div class="uk-child-width-expand@s" uk-grid>
           <div>
