Initial fb login implementation

--- a/app/views/layouts/app.tmpl
+++ b/app/views/layouts/app.tmpl
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    {{ template "content" . }}
-
-    {{ template "partials/footer_script" .}}
+		{{template "partials/fb" .}}
+    {{template "content" .}}
+    {{template "partials/footer_script" .}}
   </body>
 </html>
