--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -12,14 +12,21 @@
                 <a href="">about us</a>
               </li>
               <li>
-                <a href="">log in</a>
+								<div
+									class="fb-login-button"
+									data-max-rows="1"
+									data-size="medium"
+									data-button-type="login_with"
+									data-show-faces="false"
+									data-auto-logout-link="false"
+									data-use-continue-as="true"></div>
               </li>
             </ul>
-	    <a
-	      uk-navbar-toggle-icon=""
-	      uk-toggle=""
-	      href="#offcanvas"
-	      class="uk-navbar-toggle uk-hidden@m uk-navbar-toggle-icon uk-icon">
+						<a
+							uk-navbar-toggle-icon=""
+							uk-toggle=""
+							href="#offcanvas"
+							class="uk-navbar-toggle uk-hidden@m uk-navbar-toggle-icon uk-icon">
               <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" ratio="1">
                 <rect y="9" width="20" height="2"></rect>
                 <rect y="3" width="20" height="2"></rect>
@@ -31,7 +38,6 @@
       </div>
     </div>
     <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/old-lamp.jpeg');">
-
       <h4 class="uk-padding uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">
         Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay
         atong pagalingi-on nga mapahiyumon. Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog
@@ -59,7 +65,7 @@
                   <a href="#" class="uk-link-reset">Author</a>
                 </h4>
               </div>
-              sample  
+	      sample
             </div>
             <div class="uk-card uk-card-secondary uk-padding">
               <div class="uk-width-expand">
