--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -4,7 +4,7 @@
       <div class="uk-container uk-container-expand">
         <nav class="uk-navbar">
           <div class="uk-navbar-left">
-            <img src="./assets/images/sugilanon.png" width="80px" />
+	    <img src="./assets/images/sugilanon-v1.png" />
           </div>
           <div class="uk-navbar-right">
             <ul class="uk-navbar-nav uk-visible@m">
@@ -37,7 +37,7 @@
         </nav>
       </div>
     </div>
-    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/old-lamp.jpeg');">
+    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/night-lamp.jpg');">
       <h4 class="uk-padding uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">
         Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay
         atong pagalingi-on nga mapahiyumon. Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog
