--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -38,12 +38,12 @@
       </div>
     </div>
     <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/night-lamp.jpg');">
-      <h4 class="uk-padding uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="target: #test-filter; blur: 0,10;">
-        Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay
-        atong pagalingi-on nga mapahiyumon. Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod, nato sa panglimbasog
-        ning atong kinabuhi. Pero adunay sugilanon nga lisod natong hinumduman, sama ugaling kung grabing kasakit ang atong nahiaguman.
-        Apan kung atong mahinumduman, kining tanan pagbuot sa atong mahal nga kahitas-an. Dili man patas kung sa atong pagtaw-an,
-        apan sa ulahi kita ang mabulahan.
+      <h4 class="uk-padding uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical h-shadow" uk-parallax="target: #test-filter; blur: 0,10;">
+         Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay
+        mapahiyumon natong lingi-on. Usahay dili nato ikalimod, nga ang atong sugilanon maoy magtukmod ning kinahubi sa panlimbasog
+        aron kita mabuhi. Pero adunay sugilanon nga lisod natong hinumduman, sama ugaling kung grabing kasakit ang atong nahiaguman.
+        Apan kung atong mahinumduman, kining tanan pagbuot sa atong kahitas-an. Dili man patas kung sa atong pagtaw-an, apan sa ulahi
+        kita ra ang mabulahan.
       </h4>
     </div>
     <div class="uk-section uk-section-muted">
