--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -12,14 +12,16 @@
                 <a href="">about us</a>
               </li>
               <li>
-								<div
-									class="fb-login-button"
-									data-max-rows="1"
-									data-size="medium"
-									data-button-type="login_with"
-									data-show-faces="false"
-									data-auto-logout-link="false"
-									data-use-continue-as="true"></div>
+		<div
+		  class="fb-login-button"
+		  data-max-rows="1"
+		  data-size="medium"
+		  data-button-type="login_with"
+		  data-show-faces="false"
+		  data-auto-logout-link="false"
+		  data-use-continue-as="true"
+		  data-scope="email,public_profile"
+		  onlogin="checkLoginState();"></div>
               </li>
             </ul>
 						<a
