--- a/app/views/partials/fb.tmpl
+++ b/app/views/partials/fb.tmpl
@@ -1,24 +1,3 @@
 {{define "partials/fb"}}
-	<div id="fb-root"></div>
-	<script>
-		window.fbAsyncInit = function() {
-			FB.init({
-				appId      : '1618996761552073',
-				cookie     : true,
-				xfbml      : true,
-				version    : 'v2.12'
-			});
-
-			FB.AppEvents.logPageView();
-		};
-
-		(function(d, s, id){
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) {return;}
-			js = d.createElement(s); js.id = id;
-			js.src = "https://connect.facebook.net/en_US/sdk.js";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	</script>
-
+  <script src="/assets/js/fb.js"></script>
 {{end}}
