--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -20,10 +20,10 @@
 		  data-show-faces="false"
 		  data-auto-logout-link="false"
 		  data-use-continue-as="true"
-		  data-scope="email,public_profile"
+		  data-scope="public_profile"
 		  onlogin="checkLoginState();"></div>
-              </li>
-            </ul>
+	      </li>
+	    </ul>
 						<a
 							uk-navbar-toggle-icon=""
 							uk-toggle=""
