--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -6,23 +6,18 @@
           <div class="uk-navbar-left">
 	    <img src="./assets/images/sugilanon-v1.png" />
           </div>
-          <div class="uk-navbar-right">
-            <ul class="uk-navbar-nav uk-visible@m">
+	  <div class="uk-navbar-right">
+	    <ul class="uk-navbar-nav uk-visible@m">
 	      <li>
-		<a href="">about us</a>
+		<a href="#">ABOUT US</a>
 	      </li>
 							{{if eq .is_login false}}
 								<li>
-									<div
-										class="fb-login-button"
-										data-max-rows="1"
-										data-size="medium"
-										data-button-type="login_with"
-										data-show-faces="false"
-										data-auto-logout-link="false"
-										data-use-continue-as="true"
-										data-scope="public_profile"
-										onlogin="checkLoginState();"></div>
+									<a href="#" onclick="login();">LOGIN</a>
+								</li>
+							{{else}}
+								<li>
+									<a href="#" onclick="logout();">LOGOUT</a>
 								</li>
 							{{end}}
 	    </ul>
