--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -1,41 +1,6 @@
 {{define "content"}}
   <div class="uk-offcanvas-content">
-    <div uk-sticky="media: 960" class="uk-navbar-container tm-navbar-container uk-sticky uk-sticky-fixed">
-      <div class="uk-container uk-container-expand">
-        <nav class="uk-navbar">
-          <div class="uk-navbar-left">
-	    <img src="./assets/images/sugilanon-v1.png" />
-          </div>
-	  <div class="uk-navbar-right">
-	    <ul class="uk-navbar-nav uk-visible@m">
-	      <li>
-		<a href="#">ABOUT US</a>
-	      </li>
-							{{if eq .is_login false}}
-								<li>
-									<a href="#" onclick="login();">LOGIN</a>
-								</li>
-							{{else}}
-								<li>
-									<a href="#" onclick="logout();">LOGOUT</a>
-								</li>
-							{{end}}
-	    </ul>
-						<a
-							uk-navbar-toggle-icon=""
-							uk-toggle=""
-							href="#offcanvas"
-							class="uk-navbar-toggle uk-hidden@m uk-navbar-toggle-icon uk-icon">
-              <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" ratio="1">
-                <rect y="9" width="20" height="2"></rect>
-                <rect y="3" width="20" height="2"></rect>
-                <rect y="15" width="20" height="2"></rect>
-              </svg>
-            </a>
-          </div>
-        </nav>
-      </div>
-    </div>
+    {{template "partials/navbar" .}}
     <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('./assets/images/night-lamp.jpg');">
       <h4 class="uk-padding uk-width-1-1@m uk-text-center uk-margin-auto uk-margin-auto-vertical h-shadow" uk-parallax="target: #test-filter; blur: 0,10;">
 	 Ang sugilanon nahimo nang tipik sa atong kaugalingon. Sama kanindot sa mga bituon nga ni-aninag sa kagabhion, nga usahay
