Implement About and Settings

--- a/app/views/partials/navbar.tmpl
+++ b/app/views/partials/navbar.tmpl
@@ -3,14 +3,15 @@
     <div class="uk-container uk-container-expand">
       <nav class="uk-navbar" uk-navbar="mode: click">
 	<div class="uk-navbar-left">
-	  <img src="./assets/images/sugilanon-v1.png"/>
+	  <a href="/"><img src="./assets/images/sugilanon-v1.png"/></a>
 	</div>
 	<div class="uk-navbar-right">
 	  <ul class="uk-navbar-nav uk-visible@m desktop-navbar">
+	    <li><a href="/about">ABOUT US</a></li>
 	    {{if eq .is_login false}}
-	      <li><a href="#">ABOUT US</a></li>
 	      <li><a href="#" onclick="login();">LOGIN</a></li>
 	    {{else}}
+	      <li><a href="/settings">SETTINGS</a></li>
 	      <li><a href="#" onclick="logout();">LOGOUT</a></li>
 	    {{end}}
 	  </ul>
@@ -19,10 +20,11 @@
 	      <a href="#" class="uk-navbar-toggle" uk-navbar-toggle-icon></a>
 	      <div class="uk-navbar-dropdown">
 		<ul class="uk-nav uk-navbar-dropdown-nav">
+		  <li><a href="/about">ABOUT US</a></li>
 		  {{if eq .is_login false}}
-		    <li><a href="#">ABOUT US</a></li>
 		    <li><a href="#" onclick="login();">LOGIN</a></li>
 		  {{else}}
+		    <li><a href="/settings">SETTINGS</a></li>
 		    <li><a href="#" onclick="logout();">LOGOUT</a></li>
 		  {{end}}
 		</ul>
