--- a/app/views/about/index.tmpl
+++ b/app/views/about/index.tmpl
@@ -2,5 +2,6 @@
   <div class="uk-offcanvas-content">
     {{template "partials/navbar" .}}
     <h1>ABOUT PAGE HERE</h1>
+    {{template "partials/footer"}}
   </div>
 {{end}}
