--- a/app/views/layouts/app.tmpl
+++ b/app/views/layouts/app.tmpl
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow, noarchive, noimageindex" />
 
-    {{ template "partials/header_style" . }}
+    {{template "partials/header_style"}}
   </head>
 
   <body>
-		{{template "partials/fb" .}}
-    {{template "content" .}}
-    {{template "partials/footer_script" .}}
+		{{template "partials/fb"}}
+
+    <div class="uk-offcanvas-content">
+      {{template "partials/navbar" .}}
+      {{template "content" .}}
+      {{template "partials/footer"}}
+    </div>
+
+    {{template "partials/footer_script"}}
   </body>
 </html>
