Initial user verification

--- a/app/views/partials/navbar.tmpl
+++ b/app/views/partials/navbar.tmpl
@@ -3,7 +3,7 @@
     <div class="uk-container uk-container-expand">
       <nav class="uk-navbar" uk-navbar="mode: click">
 	<div class="uk-navbar-left">
-	  <a href="/"><img src="./assets/images/sugilanon-v1.png"/></a>
+	  <a href="/"><img src="/assets/images/sugilanon-v1.png"/></a>
 	</div>
 	<div class="uk-navbar-right">
 	  <ul class="uk-navbar-nav uk-visible@m desktop-navbar">
