enhance question and answer
Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -20,21 +20,21 @@
       </ul>
       <ul class="uk-switcher uk-margin">
 	<li>
-	  <div class="uk-card uk-card-default uk-padding">
-	    <div class="uk-width-expand">
-	      <h4>
-		<a href="#" class="uk-link-reset">Author</a>
-	      </h4>
+	  <div class="question">
+	    <div class="q-header">
+	      <div class="qoutes">
+		<div class="qoutes-icon"></div>
+	      </div>
+	      <div class="q-header-details">
+		<div class="posted_date">
+		  <span>Posted Date</span>: </div>
+		<div class="posted_type">
+		  <span>Type</span>: </div>
+	      </div>
 	    </div>
-	    sample
-	  </div>
-	  <div class="uk-card uk-card-secondary uk-padding">
-	    <div class="uk-width-expand">
-	      <h4>
-		<a href="#" class="uk-link-reset">Author</a>
-	      </h4>
+	    <div class="q-body">
+	      Dong Abloy, Kapila naka uyab?
 	    </div>
-	    sample
 	  </div>
 	</li>
 	<li>Hello!</li>
