--- a/app/views/profile/index.tmpl
+++ b/app/views/profile/index.tmpl
@@ -6,7 +6,6 @@
       </h1>
       <div class="uk-card uk-card-default uk-card-body">
         <h3 class="uk-card-title">We're sad to see you go</h3>
-        <p>Deactivating your account will disable your profile.</p>
         <a href="#deactivate-modal" class="uk-button uk-button-danger" uk-toggle>DEACTIVATE</a>
       </div>
     </div>
@@ -15,10 +14,14 @@
   <div id="deactivate-modal" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
       <h2 class="uk-modal-title">Are you sure you want to proceed?</h2>
-      <p class="uk-text-right">
-        <a class="uk-button uk-button-default uk-modal-close" href="#">CANCEL</a>
-        <a class="uk-button uk-button-danger" href="/deactivate/{{.facebook_id}}">DEACTIVATE</a>
-      </p>
+      <p>Deactivating your account will disable your profile and cannot be undone.</p>
+      <p>Please type in your username to confirm.</p>
+      <form action="/deactivate/{{.username}}" method="post">
+        <div class="uk-margin">
+          <input class="uk-input" type="text" name="username" placeholder="Username">
+					<input class="uk-margin uk-button uk-button-danger" type="submit" value="Deactivate">
+        </div>
+      </form>
     </div>
   </div>
 {{end}}
