--- a/app/views/layouts/base.tmpl
+++ b/app/views/layouts/base.tmpl
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow, noarchive, noimageindex" />
+    <title>{{.page}}</title>
 
     {{template "partials/header_style"}}
   </head>
@@ -17,6 +18,6 @@
       {{template "partials/footer"}}
     </div>
 
-    {{template "partials/footer_script"}}
+    {{template "partials/footer_script" .}}
   </body>
 </html>
