Redirect of verify

--- a/app/views/partials/footer-script.tmpl
+++ b/app/views/partials/footer-script.tmpl
@@ -5,4 +5,8 @@
   {{if eq .page "PROFILE"}}
     <script src="/assets/js/app/deactivate.js"></script>
   {{end}}
+
+  {{if eq .page "VERIFICATION PAGE"}}
+    <script src="/assets/js/app/verify.js"></script>
+  {{end}}
 {{end}}
