Update fb application id

--- a/app/views/layouts/app.tmpl
+++ b/app/views/layouts/app.tmpl
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-		{{template "partials/fb"}}
+    {{template "partials/fb" .}}
 
     <div class="uk-offcanvas-content">
       {{template "partials/navbar" .}}
