--- a/assets/css/sugilanon.css
+++ b/assets/css/sugilanon.css
@@ -20,7 +20,7 @@ a{
 }
 
 .uk-light h4 {
-  color: #DE9F37;
+  color: #ffffff;
 }
 
 .h-shadow {
@@ -55,7 +55,7 @@ a{
   background-color: #f8f8f8;
   position: absolute;
   top: 0;
-  width: 75px;
+  width: 45px;
   height: 55px;
 }
 .qoutes-icon {
@@ -64,8 +64,8 @@ a{
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   border-bottom-left-radius: 25px;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
 }
 .qoutes-icon.qoutes-right {
   border-bottom-left-radius: 0;
@@ -73,19 +73,19 @@ a{
 }
 .q-header {
   width: 100%;
-  height: 51px;
+  height: 34px;
 }
 .q-header-details {
-  margin-left: 75px;
-  font-size: 14px;
+  margin-left: 50px;
+  font-size: 10px;
 }
 .q-header-details > div > span {
   width: 85px;
   display: inline-block;
 }
 .q-body {
-  margin-right: 75px;
-  padding: 10px 0 15px 75px;
+  margin-right: 50px;
+  padding: 10px 0 15px 50px;
 }
 .q-header,
 .q-body {
