Changed /create/story route to /story

--- a/app/views/app/index.tmpl
+++ b/app/views/app/index.tmpl
@@ -24,11 +24,11 @@
 				</li>
 				{{if .is_login}}
 		<li>
-						<form action="/create/story" method="post">
+						<form action="/story" method="post">
 							<fieldset class="uk-fieldset">
 									<legend class="uk-legend">Share your story</legend>
 									<div class="uk-margin">
-										<input class="uk-input uk-form-width-medium" type="text" placeholder="Email Address">
+										<input class="uk-input uk-form-width-medium" type="text" placeholder="Title">
 									</div>
 
 									<div class="uk-margin">
