Initial admin nav

--- a/app/views/admin/index.tmpl
+++ b/app/views/admin/index.tmpl
@@ -1,3 +1,20 @@
 {{define "content"}}
-  <h1>ADMIN PAGE HERE</h1>
+  <div class="uk-container">
+    <nav class="uk-navbar" uk-navbar="mode: click">
+      <div class="uk-navbar-left">
+	<ul class="uk-navbar-nav">
+	  <li>
+	    <a href="#">Manage</a>
+	    <div class="uk-navbar-dropdown">
+	      <ul class="uk-nav uk-navbar-dropdown-nav">
+		<li class="uk-active"><a href="#">Questions</a></li>
+		<li><a href="#">Stories</a></li>
+		<li><a href="#">Users</a></li>
+	      </ul>
+	    </div>
+	  </li>
+	</ul>
+      </div>
+    </nav>
+  </div>
 {{end}}
