Display users and admins

--- a/app/views/admin/index.tmpl
+++ b/app/views/admin/index.tmpl
@@ -2,6 +2,11 @@
   <div class="uk-container">
     {{template "partials/admin-navbar"}}
 
-    <h1>HELLO</h1>
+    <ul class="uk-breadcrumb">
+      <li class="uk-disabled"><a>QUESTIONS</a></li>
+    </ul>
+    <div class="questions-container uk-margin-bottom">
+      <h3>QUESTIONS</h3>
+    </div>
   </div>
 {{end}}
