--- a/app/views/admin/stories_index.tmpl
+++ b/app/views/admin/stories_index.tmpl
@@ -2,6 +2,12 @@
   <div class="uk-container">
     {{template "partials/admin-navbar"}}
 
-    <h1>HELLO</h1>
+    <ul class="uk-breadcrumb">
+      <li><a href="/admin">ADMIN</a></li>
+      <li class="uk-disabled"><a>STORIES</a></li>
+    </ul>
+    <div class="stroies-container uk-margin-bottom">
+      <h3>STORIES</h3>
+    </div>
   </div>
 {{end}}
