--- a/app/views/partials/admin-navbar.tmpl
+++ b/app/views/partials/admin-navbar.tmpl
@@ -6,7 +6,7 @@
           <a href="#">Manage</a>
           <div class="uk-navbar-dropdown">
             <ul class="uk-nav uk-navbar-dropdown-nav">
-              <li class="uk-active"><a href="/admin">Questions</a></li>
+              <li><a href="/admin">Questions</a></li>
               <li><a href="/admin/stories">Stories</a></li>
               <li><a href="/admin/users">Users</a></li>
             </ul>
