--- a/app/views/partials/question.tmpl
+++ b/app/views/partials/question.tmpl
@@ -2,13 +2,15 @@
   <div class="question">
     <div class="q-header">
       <div class="qoutes">
-	<div class="qoutes-icon"></div>
+        <div class="qoutes-icon"></div>
       </div>
       <div class="q-header-details">
-	<div class="posted_date">
-	  <span>Posted Date</span>: </div>
-	<div class="posted_type">
-	  <span>Type</span>: </div>
+        <div class="posted_date">
+          <span>Posted Date</span>:
+        </div>
+        <div class="posted_type">
+          <span>Type</span>:
+        </div>
       </div>
     </div>
     <div class="q-body">
