--- a/app/views/partials/fb.tmpl
+++ b/app/views/partials/fb.tmpl
@@ -1,3 +1,3 @@
 {{define "partials/fb"}}
-  <script id="app-id" src="/assets/js/fb.js" data-app-id="{{.fbApplicationId}}"></script>
+  <script id="app-id" src="/assets/js/fb.js" data-app-id="{{.fb_app_id}}"></script>
 {{end}}
