Added creating of story

--- a/app/views/partials/story.tmpl
+++ b/app/views/partials/story.tmpl
@@ -4,10 +4,10 @@
       <fieldset class="uk-fieldset">
         <legend class="uk-legend">Share your story</legend>
         <div class="uk-margin">
-          <input class="uk-input uk-form-width-medium" type="text" placeholder="Title">
+          <input class="uk-input uk-form-width-medium" type="text" name="title" placeholder="Title">
         </div>
         <div class="uk-margin">
-          <textarea class="uk-textarea" rows="5" placeholder="Your Story"></textarea>
+          <textarea class="uk-textarea" rows="5" name="body" placeholder="Your Story"></textarea>
         </div>
         <button class="uk-button uk-button-primary">Submit</button>
       </fieldset>
