--- a/app/views/partials/footer-script.tmpl
+++ b/app/views/partials/footer-script.tmpl
@@ -2,6 +2,10 @@
   <script src="/assets/js/jquery-3.3.1.min.js"></script>
   <script src="/assets/js/uikit.min.js"></script>
 
+  {{if eq .page "HOME"}}
+    <script src="/assets/js/app/submit.js"></script>
+  {{end}}
+
   {{if eq .page "PROFILE"}}
     <script src="/assets/js/app/deactivate.js"></script>
   {{end}}
